[package]
name = "bpf-program-template"
version = "0.1.0"
edition = "2021"
license = "WTFPL"
publish = false

[features]
no-entrypoint = []

[dependencies]
solana-program = "=1.9.1"
thiserror = "1.0.24"
arrayref = "0.3.6"
spl-token = {version = "3.1.1", features = ["no-entrypoint"]}


[lib]
crate-type = ["cdylib", "lib"]
